Fix make dev-deploy with delete remote tag before creating a new one
