# docs/openapi/swagger.json
@@ -215,6 +215,124 @@
         "x-codegen-request-body-name" : "body"
       }
     },
+    "/auth/sso/callback/{provider}" : {
+      "get" : {
+        "description" : "Begins SSO flow",
+        "operationId" : "beginOAuth",
+        "parameters" : [ {
+          "description" : "provider name",
+          "in" : "path",
+          "name" : "provider",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "302" : {
+            "content" : { },
+            "description" : "on success redirect to the dashboard page"
+          },
+          "400" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/github_com_localpaas_localpaas_localpaas_app_apperrors.ErrorInfo"
+                }
+              }
+            },
+            "description" : "Bad Request"
+          },
+          "500" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/github_com_localpaas_localpaas_localpaas_app_apperrors.ErrorInfo"
+                }
+              }
+            },
+            "description" : "Internal Server Error"
+          }
+        },
+        "summary" : "Begins SSO flow",
+        "tags" : [ "users" ]
+      },
+      "post" : {
+        "description" : "Begins SSO flow",
+        "operationId" : "beginOAuth",
+        "parameters" : [ {
+          "description" : "provider name",
+          "in" : "path",
+          "name" : "provider",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "302" : {
+            "content" : { },
+            "description" : "on success redirect to the dashboard page"
+          },
+          "400" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/github_com_localpaas_localpaas_localpaas_app_apperrors.ErrorInfo"
+                }
+              }
+            },
+            "description" : "Bad Request"
+          },
+          "500" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/github_com_localpaas_localpaas_localpaas_app_apperrors.ErrorInfo"
+                }
+              }
+            },
+            "description" : "Internal Server Error"
+          }
+        },
+        "summary" : "Begins SSO flow",
+        "tags" : [ "users" ]
+      }
+    },
+    "/auth/sso/{provider}" : {
+      "get" : {
+        "description" : "Starts OAuth SSO flow",
+        "operationId" : "ssoOAuthBegin",
+        "responses" : {
+          "302" : {
+            "content" : { },
+            "description" : "on success redirect to provider OAuth URL"
+          },
+          "400" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/github_com_localpaas_localpaas_localpaas_app_apperrors.ErrorInfo"
+                }
+              }
+            },
+            "description" : "Bad Request"
+          },
+          "500" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/github_com_localpaas_localpaas_localpaas_app_apperrors.ErrorInfo"
+                }
+              }
+            },
+            "description" : "Internal Server Error"
+          }
+        },
+        "summary" : "Starts OAuth SSO flow",
+        "tags" : [ "sessions_auth" ]
+      }
+    },
     "/cluster/nodes" : {
       "get" : {
         "description" : "Lists cluster nodes",
@@ -2534,124 +2652,6 @@
         },
         "summary" : "Updates ssh-key",
         "tags" : [ "settings_ssh_key" ]
-      }
-    },
-    "/sso/auth/callback/{provider}" : {
-      "get" : {
-        "description" : "Begins SSO flow",
-        "operationId" : "beginOAuth",
-        "parameters" : [ {
-          "description" : "provider name",
-          "in" : "path",
-          "name" : "provider",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "302" : {
-            "content" : { },
-            "description" : "on success redirect to the dashboard page"
-          },
-          "400" : {
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/github_com_localpaas_localpaas_localpaas_app_apperrors.ErrorInfo"
-                }
-              }
-            },
-            "description" : "Bad Request"
-          },
-          "500" : {
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/github_com_localpaas_localpaas_localpaas_app_apperrors.ErrorInfo"
-                }
-              }
-            },
-            "description" : "Internal Server Error"
-          }
-        },
-        "summary" : "Begins SSO flow",
-        "tags" : [ "users" ]
-      },
-      "post" : {
-        "description" : "Begins SSO flow",
-        "operationId" : "beginOAuth",
-        "parameters" : [ {
-          "description" : "provider name",
-          "in" : "path",
-          "name" : "provider",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "302" : {
-            "content" : { },
-            "description" : "on success redirect to the dashboard page"
-          },
-          "400" : {
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/github_com_localpaas_localpaas_localpaas_app_apperrors.ErrorInfo"
-                }
-              }
-            },
-            "description" : "Bad Request"
-          },
-          "500" : {
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/github_com_localpaas_localpaas_localpaas_app_apperrors.ErrorInfo"
-                }
-              }
-            },
-            "description" : "Internal Server Error"
-          }
-        },
-        "summary" : "Begins SSO flow",
-        "tags" : [ "users" ]
-      }
-    },
-    "/sso/auth/{provider}" : {
-      "get" : {
-        "description" : "Starts OAuth SSO flow",
-        "operationId" : "ssoOAuthBegin",
-        "responses" : {
-          "302" : {
-            "content" : { },
-            "description" : "on success redirect to provider OAuth URL"
-          },
-          "400" : {
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/github_com_localpaas_localpaas_localpaas_app_apperrors.ErrorInfo"
-                }
-              }
-            },
-            "description" : "Bad Request"
-          },
-          "500" : {
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/github_com_localpaas_localpaas_localpaas_app_apperrors.ErrorInfo"
-                }
-              }
-            },
-            "description" : "Internal Server Error"
-          }
-        },
-        "summary" : "Starts OAuth SSO flow",
-        "tags" : [ "sessions_auth" ]
       }
     },
     "/users" : {
